# ServerMonitor

./: LICENSE  README.md  backend.py  frontend.py  main.py  pyproject.toml
