[project]
name = "ServerMonitor"
version = "0.1.0"
description = "Monitor resources of server(s), e.g., GPUs, RAM, and CPU utilization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn>=0.34.2",
]
